--- a/package.json
+++ b/package.json
@@ -85,5 +85,6 @@
   "main": "eslint.config.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "proxy": "https://gateway.ai.cloudflare.com"
 }
