--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "http-proxy-middleware": "^3.0.3",
     "lovable-tagger": "^1.0.19",
     "postcss": "^8.4.47",
+    "react-intersection-observer": "^9.13.1",
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
