--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "concurrently \"npm run proxy\" \"vite\"",
-    "proxy": "node server/proxy.js",
+    "dev": "vite",
     "build": "vite build",
-    "build:dev": "vite build --mode development",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
     "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.9.0",
+    "@langchain/anthropic": "^0.3.8",
+    "@langchain/core": "^0.3.19",
+    "@langchain/google-genai": "^0.1.4",
+    "@langchain/openai": "^0.3.14",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -50,6 +52,7 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "input-otp": "^1.2.4",
+    "langchain": "^0.3.6",
     "lucide-react": "^0.451.0",
     "nanoid": "^5.0.8",
     "next-themes": "^0.3.0",
@@ -74,6 +77,7 @@
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "abort-controller": "^3.0.0",
+    "ai": "^4.0.6",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.1.0",
     "cors": "^2.8.5",
