--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
+    "build:dev": "vite build --mode development"
   },
   "dependencies": {
     "ai": "^2.2.31",
