--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  {
   "scripts": {
+    "existing-script": "existing-command",
     "build:dev": "vite build --mode development"
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  }
+}
+
   "dependencies": {
     "ai": "^2.2.31",
     "openai": "^4.24.1",
