--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   {
   "scripts": {
-    "existing-script": "existing-command",
-    "build:dev": "vite build --mode development"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   }
 }
 
