--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "scripts": {
     "deploy": "npm run build && wrangler pages deploy",
+    "build:dev": "vite build --mode development"
     "build": "remix vite:build",
     "dev": "remix vite:dev",
     "test": "vitest --run",
